# iced

examples/tabbed_document_ui/: Cargo.toml  README.md
examples/tabbed_document_ui/src/: config.rs  main.rs
examples/tabbed_document_ui/src/app_status_bar/: mod.rs
examples/tabbed_document_ui/src/app_tabs/: mod.rs
examples/tabbed_document_ui/src/app_toolbar/: mod.rs
examples/tabbed_document_ui/src/document/: image.rs  mod.rs  new.rs  text.rs
examples/tabbed_document_ui/src/document_tab/: mod.rs
examples/tabbed_document_ui/src/home/: mod.rs
examples/tabbed_document_ui/src/home_tab/: mod.rs
examples/tabbed_document_ui/src/new_tab/: mod.rs
examples/tabbed_document_ui/src/tabs/: mod.rs
widget/src/: scrollable.rs
