[package]
name = "tabbed_document_ui"
version.workspace = true
authors = ["Dominic Clifton <me@dominicclifton.name>"]
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
iced.workspace = true
iced.features = ["image", "debug"]
iced_aw = { path = "../../../iced_aw" }
#iced_aw = { version = "0.11.0" , feature = ["tab_bar"]}
slotmap = "1.0.7"

[lints]
workspace = true
