[package]
name = "tabbed_document_ui"
version.workspace = true
authors = ["Dominic Clifton <me@dominicclifton.name>"]
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
iced.workspace = true
iced.features = ["image", "debug"]
iced_aw = { path = "../../../iced_aw" }
iced_fonts = { path = "../../../iced_fonts", features = ["nerd"]}

#iced_aw = { version = "0.11.0" , feature = ["tab_bar"]}
image = { version = "0.24", default-features = false }
slotmap = "1.0.7"

serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }

rfd = { version = "0.15.0" }
thiserror = "1.0.65"

[lints]
#workspace = true
